WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174706
Noise when AudioChannel lengths don't match.
https://bugs.webkit.org/show_bug.cgi?id=174706
Summary
Noise when AudioChannel lengths don't match.
Jeremy Jones
Reported
2017-07-20 22:02:57 PDT
Noise when AudioChannel lengths don't match.
Attachments
Patch
(1.52 KB, patch)
2017-07-20 22:27 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch
(1.52 KB, patch)
2017-07-21 12:33 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Patch for landing.
(1.52 KB, patch)
2017-07-21 12:34 PDT
,
Jeremy Jones
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jeremy Jones
Comment 1
2017-07-20 22:03:25 PDT
<
rdar://problem/33389856
> WebRTC 17A320/B188: Blaring static through AirPods when allowing camera/mic on webrtc session
Jeremy Jones
Comment 2
2017-07-20 22:27:02 PDT
Created
attachment 316068
[details]
Patch
Eric Carlson
Comment 3
2017-07-21 06:41:08 PDT
Comment on
attachment 316068
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=316068&action=review
> Source/WebCore/ChangeLog:9 > + When AudioChannel lengths don't match, it don't do the copy. This leaves uninitialized data in the audio buffer.
Nit: "it don't do the copy. This leaves uninitialized data in the audio buffer." => "returning early leaves uninitialized data in the audio buffer."
Jeremy Jones
Comment 4
2017-07-21 12:31:12 PDT
(In reply to Eric Carlson from
comment #3
)
> Comment on
attachment 316068
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=316068&action=review
> > > Source/WebCore/ChangeLog:9 > > + When AudioChannel lengths don't match, it don't do the copy. This leaves uninitialized data in the audio buffer. > > Nit: "it don't do the copy. This leaves uninitialized data in the audio > buffer." => "returning early leaves uninitialized data in the audio buffer."
"When AudioChannel lengths don't match it returns early leaving uninitialized data in the audio buffer."
Jeremy Jones
Comment 5
2017-07-21 12:33:05 PDT
Created
attachment 316111
[details]
Patch
Jeremy Jones
Comment 6
2017-07-21 12:34:24 PDT
Created
attachment 316112
[details]
Patch for landing.
Jeremy Jones
Comment 7
2017-07-21 12:35:23 PDT
Eric, I accidentally wiped out your r+.
WebKit Commit Bot
Comment 8
2017-07-21 12:48:52 PDT
Comment on
attachment 316112
[details]
Patch for landing. Clearing flags on attachment: 316112 Committed
r219736
: <
http://trac.webkit.org/changeset/219736
>
WebKit Commit Bot
Comment 9
2017-07-21 12:48:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug