Noise when AudioChannel lengths don't match. https://bugs.webkit.org/show_bug.cgi?id=174706 rdar://problem/33389856

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-07-21
Reviewed by Eric Carlson.

When AudioChannel lengths don't match, copyFrom() returns early leaving uninitialized data in the audio buffer.
This change zeros out the data, so there isn't objectionable noise sent to the speaker.

* platform/audio/AudioChannel.cpp:
(WebCore::AudioChannel::copyFrom):

Canonical link: https://commits.webkit.org/191545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219736 268f45cc-cd09-0410-ab3c-d52691b4dbfc